tests/compile-fail/backtrace/bad-backtrace-decl.stderr
error: Undefined Behavior: bad declaration of miri_resolve_frame - should return a struct with 5 fields
  --> $DIR/bad-backtrace-decl.rs:10:13
   |
10 | ...   miri_resolve_frame(*frame, 0); //~ ERROR Undefined Behavior: bad declaration of miri_resolve_frame - should return a struct with 5 ...
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ bad declaration of miri_resolve_frame - should return a struct with 5 fields
   |
   = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
   = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
           
   = note: inside `main` at $DIR/bad-backtrace-decl.rs:10:13

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

